--- a/index.html
+++ b/index.html
@@ -8,14 +8,32 @@
 </head>
 <body>
     <div class="ludo-container">
-        <div class="ludo"></div>
+        <div class="ludo">
+            <div class="player-pieces">
+                <div class="player-piece" player-id="P1" piece="0"></div>
+                <div class="player-piece" player-id="P1" piece="1"></div>
+                <div class="player-piece" player-id="P1" piece="2"></div>
+                <div class="player-piece" player-id="P1" piece="3"></div>
+
+                <div class="player-piece" player-id="P2" piece="0"></div>
+                <div class="player-piece" player-id="P2" piece="1"></div>
+                <div class="player-piece" player-id="P2" piece="2"></div>
+                <div class="player-piece" player-id="P2" piece="3"></div>
+            </div>
+            <div class="player-bases">
+                <div class="player-base" player-id="P1"></div>
+                <div class="player-base" player-id="P2"></div>
+            </div>
+        </div>
         <div class="footer">
             <div class="row">
                 <button id="dice-btn" class="btn btn-dice">Roll</button>
                 <div class="dice-value"></div>
                 <button id ="reset-btn" class="btn btn-reset">Reset</button>
             </div>
+            <h2 class="active-player">Active player:<span></span></h2>
         </div>
     </div>
 </body>
+<script src ="./dist/bundle.js"></script>
 </html>
